--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,57 @@
     display:  none;
 
 }
+
+.hero_section_container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: calc(60vh - 60px);
+    gap: 32px;
+
+}
+
+.hero_section_logo{
+    width: 250px;
+    height: auto;
+
+}
+
+.hero_section_title {
+    text-align: center;
+    font-size: 30px;
+    font-weight: 400;
+}
+
+.hero_section_input_container {
+    background: white;
+    padding: 10px;
+    border-radius: 10px;
+    display: flex;
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+}
+
+.input_container_location,
+.input_container_search {
+    border: none;
+    padding: 5px;
+    outline: none;
+
+}
+
+.input_container_search{
+    width: 70%;
+}
+.input_container_location {
+    width: 30%;
+    border-right: 2px solid #e0e0e0;
+}
+
+
 @media only screen and (max-width: 600px) {
     .navbar_menu_container .link {
         display: none;
@@ -57,5 +108,22 @@
     
     .hero_section {
         min-height: 80vh;
+    }
+    .hero_section_input_container{
+        flex-direction: column;
+        background-color: transparent;
+        width: 100%;
+    }
+    .input_container_location,
+    .input_container_search {
+        padding: 15px;
+        border-radius: 10px;
+        width: 90%;
+    }
+    .hero_section_container{
+        height: calc(80vh - 60px);
+    }
+    .input_container_location {
+        border-right: none;
     }
 }
