--- a/styles.css
+++ b/styles.css
@@ -5,11 +5,11 @@
     font-family: "Poppins", sans-serif;
 }
 .hero_section {
-  background: url(/images/heroSectionBackground.png);
-  background-position: center;
-  background-size: cover;
-  color: white;
-  min-height: 60vh;
+    background: url(/images/heroSectionBackground.png);
+    background-position: center;
+    background-size: cover;
+    color: white;
+    min-height: 60vh;
 
 }
 .navbar {
@@ -126,4 +126,138 @@
     .input_container_location {
         border-right: none;
     }
+}
+
+
+.container {
+    margin: 48px auto;
+    width: 80%;
+}
+
+.we__offer{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 16px;
+    align-items: center;
+    justify-content: center;
+}
+
+.we__offer .card{
+    border-radius: 10px;
+    overflow: hidden;
+    border: 1px solid #e0e0e0;
+
+
+}
+
+.we__offer .card img{
+    width: 100%;
+    height: 150px;
+    object-fit: cover;
+    object-position: center;
+}
+
+.we__offer .card h2{
+    padding: 10px 10px 0 10px;
+    font-size: 20px;
+    font-weight: 400;
+
+}
+
+.we__offer .card p{
+    padding: 0px 10px 15px 10px;
+    font-size: 13px;
+    font-weight: 300;
+}
+
+.we__offer .card:hover{
+    transform: scale(1.05);
+    transition: all 0.3s ease;
+}
+
+.collections h1{
+    font-weight: 400;
+}
+
+.collections .sub_heading_container{
+    font-size: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 16px;
+}
+
+.sub_heading_container span:nth-child(2){
+    color: #ff5a5f;
+    font-size: 13px;
+}
+
+.collections_card_container{
+    display: flex;
+    gap: 16px;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin-top: 24px;
+}
+.collections_card_container .card{
+    height: 300px;
+    min-width: 240px;
+    background-size: cover;
+    background-position: center;
+    border-radius: 10px;
+    overflow: hidden;
+    border: 1px solid #e0e0e0;
+    position: relative;
+}
+
+.card1{
+    background-image: url('images/collection1.jpg');
+}
+
+.card2{
+    background-image: url('images/collection2.jpg');
+}
+
+.card3{
+    background-image: url('images/collection3.jpg');
+}
+.card4{
+    background-image: url('images/collection4.jpg');
+}
+
+.overlay{
+    background: linear-gradient(
+        0deg,
+        rgba(0, 0, 0, 0.9) 0%,
+        rgba(0, 0, 0, 0.05) 50%,
+        rgba(0, 0, 0, 0.05) 85%,
+    );
+    width: 100%;
+    height: 100%;
+    display: absolute;
+    top: 0;
+    left: 0;
+    border-radius: 10px;
+}
+
+.collections_card_container .card .content{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    padding: 12px 16px;
+    color: white;
+    font-size: 14px;
+    width: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    border-radius: 0 0 10px 10px;   
+}
+.collections_card_container .card:hover{
+    transform: scale(1.05);
+    transition: all 0.3s ease-in-out;
+}
+
+.content h4{
+    font-weight: 400;
 }
