--- a/styles.css
+++ b/styles.css
@@ -395,3 +395,126 @@
         flex-direction: column;
     }
 }
+
+.footer{
+    width: 100%;
+
+}
+
+.footer_section1{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 90%;
+    margin: auto;
+}
+
+.footer_section1 img{
+    width: 120px;
+    height: auto;
+}
+
+.section_buttonContainer{
+    display: flex;
+    gap: 16px;
+}
+.section_buttonContainer button{
+    padding: 5px;
+    width: 90px;
+    border: 1px solid #e0e0e0;
+    background-color: transparent;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.navigation_container{
+    display: grid;
+    width: 90%;
+    margin: auto;
+
+    /* grid-template-columns: 1fr 1fr 1fr 1fr 1fr; */
+    grid-template-columns: repeat(5, 1fr);
+
+    gap: 1rem;
+    padding: 48px 0;
+}
+
+.link_container{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+.link_container h5{
+    font-weight: 500;
+    font-size: 14px;
+    margin-bottom: 5px;
+    letter-spacing: 0.8px;
+}
+
+.footer_link{
+    text-decoration: none;
+    color: e0e0e0;
+    font-size: 13px;    
+    font-weight: 300;
+    letter-spacing: 0.5px;
+}
+
+.footer_link:hover{
+    color: black;
+}
+
+.social_links_container{
+    display: flex;
+    gap: 0.5rem;
+}
+.social_links_container button{
+    background-color: black;
+    border: none;
+    width: 25px;    
+    height: 25px;
+    border-radius: 30px;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+.social_links_container button i{
+    font-size: 13px;
+    color: white;
+}
+.footer_store_logos{
+    width: 100%;
+}
+.footer .disclaimer{
+    width: 90%;
+    margin: auto;
+    padding: 1rem 0;
+    font-size: 12px;
+    color: grey;
+    border-top: 1px solid #e0e0e0;
+}
+
+@media only screen and (max-width: 900px){
+    .navigation_container{
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media only screen and (max-width: 600px){
+    .navigation_container{
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media only screen and (max-width: 400px){
+    .footer_section1{
+        flex-direction: column;
+        gap: 1rem;
+        align-items: flex-start;
+    }
+
+    .navigation_container{
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
